Updated the projects page

--- a/webpages/projects.html
+++ b/webpages/projects.html
@@ -45,7 +45,7 @@
 
                 <hr style="border: 0; border-top: 0.1rem solid white; width: 75%; margin: 0px auto;">
 
-                <p class="updateLog">Added new character art made by Kai!</p>
+                <p class="updateLog">Added new character pages and lore.</p>
 
                 <hr style="border: 0; border-top: 0.1rem solid white; width: 75%; margin: 0px auto;">
                 
