Added Cario art

--- a/nationPages/altipianiPages/altipianiMainpage.html
+++ b/nationPages/altipianiPages/altipianiMainpage.html
@@ -59,7 +59,7 @@
 
               <!-- Cario -->
               <a href="./castPages/cario.html" class="castCoverTwo">
-                  <img src="altipianiImg/placeholder.png" alt="carioCover">
+                  <img src="altipianiImg/cario.png" alt="carioCover">
               </a>
 
               <a class="castTextTwo" href="./castPages/cario.html">
