--- a/nationPages/altipianiPages/castPages/cario.html
+++ b/nationPages/altipianiPages/castPages/cario.html
@@ -33,7 +33,7 @@
 
         <div class="middleBlock">
 
-          <img src="../altipianiImg/castPlaceholder.png" alt="castImage" class="sideCastImg">
+          <img src="../altipianiImg/bigCario.png" alt="castImage" class="sideCastImg">
             
           <h2 class="secondTitle">Cario Vesco</h2>
 
@@ -41,7 +41,7 @@
 
             <hr style="border: 0; border-top: 0.1rem solid white; width: 90%; margin: 0px auto;">
 
-            <p>Headshot by: WIP</p>
+            <p>Headshot by: @Ur_Local_Potato_Kai</p>
             <p>Full body by: WIP</p>
             <p>Reference sheet by: WIP</p>
           
