--- a/webpages/projects.html
+++ b/webpages/projects.html
@@ -45,7 +45,7 @@
 
                 <hr style="border: 0; border-top: 0.1rem solid white; width: 75%; margin: 0px auto;">
 
-                <p class="updateLog">Added new Info boxes to the all characters page and nation pages. We'll fill these in later.</p>
+                <p class="updateLog">Added Cario art by @Ur_Local_Potato_Kai!</p>
 
                 <hr style="border: 0; border-top: 0.1rem solid white; width: 75%; margin: 0px auto;">
                 
