--- a/nationPages/riimutPages/castPages/ase.html
+++ b/nationPages/riimutPages/castPages/ase.html
@@ -37,17 +37,55 @@
             
           <h2 class="secondTitle">Åse</h2>
 
-          <span class="creditList">
+          <div class="infoSlider">
 
-            <hr style="border: 0; border-top: 0.1rem solid white; width: 90%; margin: 0px auto;"> 
+            <button class="sliderBtn prev">&lt;</button>
 
-            <p>Headshot by: @Tea4silver</p>
-            <p>Full body by: WIP</p>
-            <p>Reference sheet by: WIP</p>
+            <div class="sliderContent">
+              <hr class="upperHr">
 
-            <hr style="border: 0; border-top: 0.1rem solid white; width: 80%; margin: 0px auto;">
+              <div class="slides">
 
-          </span>
+                <div class="slide active">
+                  <p>Headshot by: @Tea4Silver</p>
+                  <p>Full body by: WIP</p>
+                  <p>Reference sheet by: WIP</p>
+                </div>
+
+                <div class="slide extraInfo">
+                  <div>
+                    <p><b>Age:</b> Unknown</p>
+                    <p><b>Gender:</b> Female</p>
+                    <p><b>Species:</b> Human</p>
+                    <p><b>Birthday:</b> Unknown</p>
+                  </div>
+
+                  <div>
+                    <p><b>Orientation:</b> Pansexual</p>
+                    <p><b>Occupation:</b> Soldier</p>
+                    <p><b>Residence:</b> Riimut village</p>
+                    <p><b>Relationship status:</b> Unknown</p>
+                  </div>
+                </div>
+
+                <div class="slide songs">
+                  <h2>Inspired by:</h2>
+                  <hr class="inspoSongHr">
+                  <div class="scrollWrapper">
+                    <ul class="scrollable">
+                      <li><a href="https://www.youtube.com/watch?v=Sk-U8ruIQyA">Blood // Water - grandson</a></li>
+                    </ul>
+                  </div>
+                </div>
+
+              </div>
+
+              <hr class="lowerHr">
+            </div>
+
+            <button class="sliderBtn next">&gt;</button>
+
+          </div>
 
           <p class="castText">(WIP)
           </p>
@@ -165,6 +203,34 @@ input.addEventListener('input', () =>
             suggestions.appendChild(li);
         });
     }
+});
+
+// ====================
+// Slider
+// ====================
+
+const slides = document.querySelectorAll('.slide');
+const prevBtn = document.querySelector('.prev');
+const nextBtn = document.querySelector('.next');
+
+let current = 0;
+
+function showSlide(index) 
+{
+  slides.forEach(slide => slide.classList.remove('active'));
+  slides[index].classList.add('active');
+}
+
+prevBtn.addEventListener('click', () => 
+{
+  current = (current - 1 + slides.length) % slides.length;
+  showSlide(current);
+});
+
+nextBtn.addEventListener('click', () => 
+{
+  current = (current + 1) % slides.length;
+  showSlide(current);
 });
 </script>
 </body>
