Added extra songs

--- a/nationPages/altipianiPages/castPages/cario.html
+++ b/nationPages/altipianiPages/castPages/cario.html
@@ -68,15 +68,17 @@
                   </div>
                 </div>
 
-                <!-- <div class="slide songs">
-                  <h2>Inspired by:</h2>
-                  <hr class="inspoSongHr">
+                <div class="slide songs">
+                  <h2>Playlist</h2>
+                  <hr class="playlistHr">
                   <div class="scrollWrapper">
                     <ul class="scrollable">
-                      <li><a href="#">Song - Artist</a></li>
+                      <li><a href="https://www.youtube.com/watch?v=X3r7GD0R56s" target="_blank" rel="noopener noreferrer">My Way Of Life - Frank Sinatra</a></li>
+                      <li><a href="https://www.youtube.com/watch?v=48bLO1U273U" target="_blank" rel="noopener noreferrer">Undone - Desmeon</a></li>
+                      <li><a href="https://www.youtube.com/watch?v=pLJ85XExZtQ" target="_blank" rel="noopener noreferrer">& - Tally Hall</a></li>
                     </ul>
                   </div>
-                </div> -->
+                </div>
 
               </div>
 
@@ -104,7 +106,7 @@
         <footer>
             <div class="footerContainer">
                 <div class="footerText">
-                    <a href="https://discord.gg/Aw5rpJ3DN6">
+                    <a href="https://discord.gg/Aw5rpJ3DN6" target="_blank" rel="noopener noreferrer">
                         <img src="../../../img/dcLogo.png" alt="discordLogo" class="dcLogo">
                     </a>
                 </div>
