--- a/nationPages/altipianiPages/castPages/nicolas.html
+++ b/nationPages/altipianiPages/castPages/nicolas.html
@@ -68,15 +68,17 @@
                   </div>
                 </div>
 
-                <!-- <div class="slide songs">
-                  <h2>Inspired by:</h2>
-                  <hr class="inspoSongHr">
+                <div class="slide songs">
+                  <h2>Playlist</h2>
+                  <hr class="playlistHr">
                   <div class="scrollWrapper">
                     <ul class="scrollable">
-                      <li><a href="#">Song - Artist</a></li>
+                       <li><a href="https://www.youtube.com/watch?v=qWJU_eANW4M" target="_blank" rel="noopener noreferrer">RUNAWAY - OneRepublic</a></li>
+                       <li><a href="https://www.youtube.com/watch?v=QERUCpqcJf0" target="_blank" rel="noopener noreferrer">Drinking with Cupid - VOILÀ</a></li>
+                       <li><a href="https://www.youtube.com/watch?v=iFbbnzR2E88" target="_blank" rel="noopener noreferrer">The Other Side Of Paradise - Glass Animals</a></li>
                     </ul>
                   </div>
-                </div> -->
+                </div>
 
               </div>
 
@@ -104,7 +106,7 @@
         <footer>
             <div class="footerContainer">
                 <div class="footerText">
-                    <a href="https://discord.gg/Aw5rpJ3DN6">
+                    <a href="https://discord.gg/Aw5rpJ3DN6" target="_blank" rel="noopener noreferrer">
                         <img src="../../../img/dcLogo.png" alt="discordLogo" class="dcLogo">
                     </a>
                 </div>
