--- a/nationPages/altipianiPages/castPages/reve.html
+++ b/nationPages/altipianiPages/castPages/reve.html
@@ -69,12 +69,21 @@
                 </div>
 
                 <div class="slide songs">
-                  <h2>Inspired by:</h2>
-                  <hr class="inspoSongHr">
+                  <h2>Playlist</h2>
+                  <hr class="playlistHr">
                   <div class="scrollWrapper">
                     <ul class="scrollable">
-                      <li><a href="https://www.youtube.com/watch?v=TbWV7gCPiYc">Sleep Well - CG5</a></li>
-                      <li><a href="https://www.youtube.com/watch?v=xkIBM71E0_w">Wouldn't You Like - Jorge Rivera-Herrans</a></li>
+                      <li><a href="https://www.youtube.com/watch?v=TbWV7gCPiYc" target="_blank" rel="noopener noreferrer">Sleep Well - CG5</a></li>
+                      <li><a href="https://www.youtube.com/watch?v=QuvqzlxEO6g" target="_blank" rel="noopener noreferrer">it boy - bbno$</a></li>
+                      <li><a href="https://www.youtube.com/watch?v=xkIBM71E0_w" target="_blank" rel="noopener noreferrer">Wouldn't You Like - Jorge Rivera-Herrans</a></li>
+                      <li><a href="https://www.youtube.com/watch?v=0JqxpaJot2E" target="_blank" rel="noopener noreferrer">The Code - Nemo</a></li>
+                      <li><a href="https://www.youtube.com/watch?v=cHra8ySMxo8" target="_blank" rel="noopener noreferrer">CUPID'S GIRL - MARINA</a></li>
+                      <li><a href="https://www.youtube.com/watch?v=vjBFftpQxxM" target="_blank" rel="noopener noreferrer">Butcher Vanity - Vane Lily</a></li>
+                      <li><a href="https://www.youtube.com/watch?v=VuALzgw4rYQ" target="_blank" rel="noopener noreferrer">FORGET YOU - Dutch Melrose</a></li>
+                      <li><a href="https://www.youtube.com/watch?v=YhEHhNxkYMo" target="_blank" rel="noopener noreferrer">Cassandra - Florence + The Machine</a></li>
+                      <li><a href="https://www.youtube.com/watch?v=GJQpBUcKhTk" target="_blank" rel="noopener noreferrer">Brighter - Christian Borle</a></li>
+                      <li><a href="https://www.youtube.com/watch?v=8g4U8nO0bn4" target="_blank" rel="noopener noreferrer">Back to Forgetting - JJ</a></li>
+                      <li><a href="https://www.youtube.com/watch?v=pco91kroVgQ" target="_blank" rel="noopener noreferrer">Applause - Lady Gaga</a></li>
                     </ul>
                   </div>
                 </div>
@@ -104,7 +113,7 @@
         <footer>
             <div class="footerContainer">
                 <div class="footerText">
-                    <a href="https://discord.gg/Aw5rpJ3DN6">
+                    <a href="https://discord.gg/Aw5rpJ3DN6" target="_blank" rel="noopener noreferrer">
                         <img src="../../../img/dcLogo.png" alt="discordLogo" class="dcLogo">
                     </a>
                 </div>
