--- a/nationPages/altipianiPages/castPages/valerio.html
+++ b/nationPages/altipianiPages/castPages/valerio.html
@@ -68,15 +68,22 @@
                   </div>
                 </div>
 
-                <!-- <div class="slide songs">
-                  <h2>Inspired by:</h2>
-                  <hr class="inspoSongHr">
+                <div class="slide songs">
+                  <h2>Playlist</h2>
+                  <hr class="playlistHr">
                   <div class="scrollWrapper">
                     <ul class="scrollable">
-                      <li><a href="#">Song - Artist</a></li>
+                      <li><a href="https://www.youtube.com/watch?v=Kq0M4miVjyw" target="_blank" rel="noopener noreferrer">Shadow - Livingston</a></li>
+                      <li><a href="https://www.youtube.com/watch?v=fnlJw9H0xAM" target="_blank" rel="noopener noreferrer">The Search - NF</a></li>
+                      <li><a href="https://www.youtube.com/watch?v=7_IPwh4eTPQ" target="_blank" rel="noopener noreferrer">New God - Moon Walker</a></li>
+                      <li><a href="https://www.youtube.com/watch?v=fdtvUXJ3K3E" target="_blank" rel="noopener noreferrer">Gladiator - Jann</a></li>
+                      <li><a href="https://www.youtube.com/watch?v=XNyCKXk4f60" target="_blank" rel="noopener noreferrer">Emperor's New Clothes - Jann</a></li>
+                      <li><a href="https://www.youtube.com/watch?v=hNdvp9Qo8PA" target="_blank" rel="noopener noreferrer">Just a Man - Jorge Rivera-Herrans</a></li>
+                      <li><a href="https://www.youtube.com/watch?v=lBeGIPvkaas" target="_blank" rel="noopener noreferrer">IOU - Layto</a></li>
+                      <li><a href="https://www.youtube.com/watch?v=u4zCRc7j9M0" target="_blank" rel="noopener noreferrer">Skin Of A Saint - Connor Kauffman</a></li>
                     </ul>
                   </div>
-                </div> -->
+                </div>
 
               </div>
 
@@ -106,7 +113,7 @@
         <footer>
             <div class="footerContainer">
                 <div class="footerText">
-                    <a href="https://discord.gg/Aw5rpJ3DN6">
+                    <a href="https://discord.gg/Aw5rpJ3DN6" target="_blank" rel="noopener noreferrer">
                         <img src="../../../img/dcLogo.png" alt="discordLogo" class="dcLogo">
                     </a>
                 </div>
