--- a/nationPages/zloyvorPages/castPages/anastasia.html
+++ b/nationPages/zloyvorPages/castPages/anastasia.html
@@ -69,11 +69,11 @@
                 </div>
 
                 <div class="slide songs">
-                  <h2>Inspired by:</h2>
-                  <hr class="inspoSongHr">
+                  <h2>Playlist</h2>
+                  <hr class="playlistHr">
                   <div class="scrollWrapper">
                     <ul class="scrollable">
-                      <li><a href="https://www.youtube.com/watch?v=GuieSzdFY2U&list=PLMu_VPFtEvET2GC3RyKx5gxD4ng4B0YaW">Bloodborne OST - Ryan Amon</a></li>
+                      <li><a href="https://www.youtube.com/watch?v=GuieSzdFY2U&list=PLMu_VPFtEvET2GC3RyKx5gxD4ng4B0YaW" target="_blank" rel="noopener noreferrer">Bloodborne OST - Ryan Amon</a></li>
                     </ul>
                   </div>
                 </div>
@@ -99,7 +99,7 @@
         <footer>
             <div class="footerContainer">
                 <div class="footerText">
-                    <a href="https://discord.gg/Aw5rpJ3DN6">
+                    <a href="https://discord.gg/Aw5rpJ3DN6" target="_blank" rel="noopener noreferrer">
                         <img src="../../../img/dcLogo.png" alt="discordLogo" class="dcLogo">
                     </a>
                 </div>
