--- a/nationPages/altipianiPages/castPages/cosmo.html
+++ b/nationPages/altipianiPages/castPages/cosmo.html
@@ -69,11 +69,15 @@
                 </div>
 
                 <div class="slide songs">
-                  <h2>Inspired by:</h2>
-                  <hr class="inspoSongHr">
+                  <h2>Playlist</h2>
+                  <hr class="playlistHr">
                   <div class="scrollWrapper">
                     <ul class="scrollable">
-                      <li><a href="https://www.youtube.com/watch?v=bem_d49NBLc">The Data Stream - The Stupendium</a></li>
+                      <li><a href="https://www.youtube.com/watch?v=bem_d49NBLc" target="_blank" rel="noopener noreferrer">The Data Stream - The Stupendium</a></li>
+                      <li><a href="https://www.youtube.com/watch?v=NocXEwsJGOQ" target="_blank" rel="noopener noreferrer">Miku - Anamanaguchi</a></li>
+                      <li><a href="https://www.youtube.com/watch?v=1xEfMnXyGkA" target="_blank" rel="noopener noreferrer">Language of the Lost - Riproducer</a></li>
+                      <li><a href="https://www.youtube.com/watch?v=KlTNKOnfXFk" target="_blank" rel="noopener noreferrer">Static - FLAVOR FOLEY</a></li>
+                      <li><a href="https://www.youtube.com/watch?v=0iVlSNpq8i8" target="_blank" rel="noopener noreferrer">BIRDBRAIN - Jamie Paige</a></li>
                     </ul>
                   </div>
                 </div>
@@ -87,7 +91,7 @@
 
           </div>
 
-          <p class="castText">The Cybernetic Support Mechanism, or more commonly referred to as Cosmo, is an Ai built by 
+          <p class="castText">The Cybernetic Support Mechanism, or more commonly referred to as Cosmo, is an AI built by 
             none other than<a class="referLink" href="valerio.html">the Emperor</a> himself. He was designed to assist people with mundane tasks like finding information, 
             ordering food or giving reminders for things, but to some people, he's become a friend, a buddy that's always there 
             when you need them. Thanks to his ability to read and copy emotions it's almost like he's a real  human as well, which 
@@ -104,7 +108,7 @@
         <footer>
             <div class="footerContainer">
                 <div class="footerText">
-                    <a href="https://discord.gg/Aw5rpJ3DN6">
+                    <a href="https://discord.gg/Aw5rpJ3DN6" target="_blank" rel="noopener noreferrer">
                         <img src="../../../img/dcLogo.png" alt="discordLogo" class="dcLogo">
                     </a>
                 </div>
