--- a/nationPages/riimutPages/castPages/ase.html
+++ b/nationPages/riimutPages/castPages/ase.html
@@ -47,9 +47,9 @@
               <div class="slides">
 
                 <div class="slide active">
-                  <p>Headshot by: @Tea4Silver</p>
-                  <p>Full body by: WIP</p>
-                  <p>Reference sheet by: WIP</p>
+                  <p class="creditText">Headshot by: @Tea4Silver</p>
+                  <p class="creditText">Full body by: WIP</p>
+                  <p class="creditText">Reference sheet by: WIP</p>
                 </div>
 
                 <div class="slide extraInfo">
