--- a/nationPages/altipianiPages/altipianiMainpage.html
+++ b/nationPages/altipianiPages/altipianiMainpage.html
@@ -209,7 +209,7 @@
 
                         <p>
                           Though originally from Vriesland, after moving to his wife's homeland of Altipiani, he
-                          didn't seem to have that much trouble fitting in, already becoming friends with Nicolas on their first day.
+                          didn't seem to have that much trouble fitting in, already becoming friends with Nicolas on their first day at work.
                         </p>
                     </div>
                 </div> 
