--- a/nationPages/sothleighPages/sothleighMainpage.html
+++ b/nationPages/sothleighPages/sothleighMainpage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vriesland - Mindbound</title>
+    <title>Sothleigh - Mindbound</title>
     <link rel="stylesheet" href="../nation.css" type="text/css">
      <link rel="icon" type="image/x-icon" href="../../img/favi.png">
 </head>
@@ -29,57 +29,56 @@
 
         <h1 class="mainTitleWhite">Mindbound</h1>
         
-        <img src="vrieslandImg/vrieslandHeader.png" alt="headerImage" class="headerImg">
+        <img src="sothleighImg/sothleighHeader.png" alt="headerImage" class="headerImg">
 
         <div class="middleBlock">
 
             <a href="javascript:history.back()" class="backButton">&lt;Back</a>
             
-            <h2 class="secondTitle">Vriesland</h2>
+            <h2 class="secondTitle">Sothleigh</h2>
 
             <p class="nationText">
-              After the mysterious disappearance of the royal family during the second rune war, 
-              Vriesland has been under the control of their prime minister. Amidst all the chaos, the 
-              change of ruler almost went unnoticed. Their minister took charge right away, making sure everything 
-              went as smoothly as possible while the war continued to wreak havoc upon the land. He also managed to strike 
-              a deal with Altipiani to help rebuild Vriesland after all the destruction, which is why after a decade it 
-              still has a thriving economy and more modern technology.
+              Ah Sothleigh, THE place to be when you want to get successful in your pathetic, lazy lives. 
+              Our factories accept anyone that's looking for something to do in their life, and worry not, we pay generously. 
+              As for our lovely, hard working natives, put your endless energy to use and work overtime! All our workers will become 
+              pillars holding up our incredible economy, if that's not a title worth boasting about, I don't know what is! 
+              So what are you waiting for? Come on down to Sothleigh and show us your dedication and perseverance!
             </p>
 
             <h2 class="thirdTitle">Cast</h2>
 
             <div class="middleBlockLowerContent">
 
-              <!-- Julia -->
-              <a href="./castPages/julia.html" class="castCoverOne">
-                  <img src="vrieslandImg/placeholder.png" alt="juliaCover">
+              <!-- Amphon -->
+              <a href="./castPages/amphon.html" class="castCoverOne">
+                  <img src="sothleighImg/placeholder.png" alt="amphonCover">
               </a>
 
-              <a class="castTextOne" href="./castPages/julia.html">
-                  <p>Julia(WIP)</p>
+              <a class="castTextOne" href="./castPages/amphon.html">
+                  <p>Amphon(WIP)</p>
               </a>
 
-              <!-- ? -->
-              <a href="./castPages/?.html" class="castCoverTwo">
-                  <img src="vrieslandImg/placeholder.png" alt="?Cover">
+              <!-- Joseph -->
+              <a href="./castPages/joseph.html" class="castCoverTwo">
+                  <img src="sothleighImg/placeholder.png" alt="josephCover">
               </a>
 
-              <a class="castTextTwo" href="./castPages/?.html">
-                  <p>?</p>
+              <a class="castTextTwo" href="./castPages/joseph.html">
+                  <p>Joseph(WIP)</p>
               </a>
 
-              <!-- ? -->
-              <a href="./castPages/?.html" class="castCoverThree">
-                  <img src="vrieslandImg/placeholder.png" alt="?Cover">
+              <!-- Mycroft -->
+              <a href="./castPages/mycroft.html" class="castCoverThree">
+                  <img src="sothleighImg/placeholder.png" alt="mycroftCover">
               </a>
 
-              <a class="castTextThree" href="./castPages/?.html">
-                  <p>?</p>
+              <a class="castTextThree" href="./castPages/mycroft.html">
+                  <p>Mycroft(WIP)</p>
               </a>
 
               <!-- ? -->
               <a href="./castPages/?.html" class="castCoverFour">
-                  <img src="vrieslandImg/placeholder.png" alt="?Cover">
+                  <img src="sothleighImg/placeholder.png" alt="?Cover">
               </a>
 
               <a class="castTextFour" href="./castPages/?.html">
@@ -91,15 +90,14 @@
 
             <div class="middleBlockOneDivinity">
 
-              <!-- Mirwa -->
-              <a href="./castPages/mirwa.html" class="divinityOneCover">
-                  <img src="vrieslandImg/placeholder.png" alt="mirwaCover">
+              <!-- God of Production -->
+              <a href="./castPages/productionGod.html" class="divinityOneCover">
+                  <img src="sothleighImg/placeholder.png" alt="productionGodCover">
               </a>
 
-              <a class="divinityOneText" href="./castPages/mirwa.html">
-                  <p>Mirwa(WIP)</p>
+              <a class="divinityOneText" href="./castPages/productionGod.html">
+                  <p>God Of Production(WIP)</p>
               </a>
-
             </div>
 
              <h2 class="mentionsTitle">Honorable Mentions</h2>
@@ -129,7 +127,7 @@
                         <img src="../../img/dcLogo.png" alt="discordLogo" class="dcLogo">
                     </a>
                 </div>
-                <img src="vrieslandImg/vrieslandFooter.png" alt="footerImage" class="footerImg">
+                <img src="sothleighImg/sothleighFooter.png" alt="footerImage" class="footerImg">
             </div>
         </footer>
     </main>
