--- a/nationPages/nations.html
+++ b/nationPages/nations.html
@@ -60,10 +60,10 @@
                 <li><a class="midprot" href="./midprotPages/midprotMainpage.html">Midprot(WIP)</a></li>
                 <li><a class="nesgen" href="./nesgenPages/nesgenMainpage.html">Nesgen(WIP)</a></li>
                 <li><a class="kokka" href="./kokkaPages/kokkaMainpage.html">Shokuminchi Kokka(WIP)</a></li>
-                <li><a class="sothleigh" href="./sothleighPages/sothleighMainpage.html">Sothleigh(WIP)</a></li>
+                <li><a class="sothleigh" href="./sothleighPages/sothleighMainpage.html">Sothleigh</a></li>
                 <li><a class="terpayatre" href="./terpayatrePages/terpayatreMainpage.html">Terpayâtre(WIP)</a></li>
                 <li><a class="wasteland" href="./wastelandPages/wastelandMainpage.html">The Wasteland(WIP)</a></li>
-                <li><a class="vriesland" href="./vrieslandPages/vrieslandMainpage.html">Vriesland(WIP)</a></li>
+                <li><a class="vriesland" href="./vrieslandPages/vrieslandMainpage.html">Vriesland</a></li>
                 <li><a class="zloyvor" href="./zloyvorPages/zloyvorMainpage.html">Zloyvor</a></li>
             </ul>
             <a class="allCharLink" href="../webpages/allCharacters.html">
